# O-Invader-Firmware

./: README.md
app/: CMakeLists.txt  pm_static.yml  prj-prod.conf  prj.conf  west.yml
app/boards/arm/o-invader/: Kconfig  Kconfig.board  Kconfig.defconfig  board.cmake  o-invader.dts  o-invader.yaml  o-invader_defconfig
app/src/: conf.h  main.c
app/src/components/bluetooth/: bluetooth_core.c  bluetooth_core.h  configuration_service.c  configuration_service.h  punch_information_service.c  punch_information_service.h
app/src/components/data_provider/: punch_processing.c  punch_processing.h  punch_provider.c  punch_provider.h  spi_scraper.c  spi_scraper.h
app/src/components/device_state/: battery_state.c  battery_state.h
app/src/components/logging/: logging.c  logging.h
app/src/components/utils/: crc32.c  crc32.h  device_config.c  device_config.h  device_sleep.c  device_sleep.h  flash_storage.c  flash_storage.h  led_indication.c  led_indication.h  watchdog.c  watchdog.h
